# SparseMatrixAcclerator

./: .gitignore  Makefile  README.md
acc/axi/: delta_pr_accelerator.v  delta_pr_accelerator_axi_top.sv  delta_pr_accelerator_control_s_axi.v  hbm_channel_controller.sv  hbm_channel_controller_counter.sv  hbm_channel_controller_read.sv  hbm_channel_controller_write.sv  mem_axi_control.sv  mem_axi_control_counter.sv  mem_axi_control_read.sv  mem_axi_control_write.sv
acc/bitstream/u55c/: delta_pr_accelerator
acc/doc/: Performance.md
acc/host/: host.cpp
acc/inc/: accelerator.vh
acc/ip/active_v_edge_fifo_ft/: active_v_edge_fifo_ft.xci
acc/ip/active_v_id_fifo/: active_v_id_fifo.xci
acc/ip/active_v_id_fifo_ft/: active_v_id_fifo_ft.xci
acc/ip/active_v_offset_fifo/: active_v_offset_fifo.xci
acc/ip/active_v_offset_fifo_ft/: active_v_offset_fifo_ft.xci
acc/ip/active_v_value_fifo/: active_v_value_fifo.xci
acc/ip/active_v_value_fifo_ft/: active_v_value_fifo_ft.xci
acc/ip/bram_addr_fifo_ft/: bram_addr_fifo_ft.xci
acc/ip/controller_edge_addr_fifo/: controller_edge_addr_fifo.xci
acc/ip/controller_edge_fifo/: controller_edge_fifo.xci
acc/ip/edge_addr_fifo_ft/: edge_addr_fifo_ft.xci
acc/ip/edge_mask_fifo_ft/: edge_mask_fifo_ft.xci
acc/ip/first_edge_rom/: first_edge_rom.xci
acc/ip/iteration_end_fifo/: iteration_end_fifo.xci
acc/ip/prefetch_fifo_ft/: prefetch_fifo_ft.xci
acc/ip/pull_first_flag_fifo/: pull_first_flag_fifo.xci
acc/ip/pull_first_flag_fifo_ft/: pull_first_flag_fifo_ft.xci
acc/ip/push_flag_fifo/: push_flag_fifo.xci
acc/ip/push_flag_fifo_ft/: push_flag_fifo_ft.xci
acc/ip/vis_bitmap/: vis_bitmap.xci
acc/ip/vtx_bram_data_fifo_ft/: vtx_bram_data_fifo_ft.xci
acc/ip/vtx_bram_ip_single/: vtx_bram_ip_single.xci
acc/testbench/: BRAM_tb.sv  M01_tb.sv  M02_rd_active_vertex_offset_tb.sv  M03_offset_uram_tb.sv  M04_tb.sv  M05_tb.sv  M06_tb.sv  M07_tb.sv  M08_tb.sv  delta_pr_accelerator_tb.sv  hbm_interface_tb.sv  omega_tb.sv  vertex_bram_tb.sv
acc/top/: M01_rd_active_vertex.v  M02_rd_active_vertex_offset.v  M03_offset_uram.v  M04_rd_active_vertex_edge.v  M05_combine_edge_rqst.v  M07_scheduler.v  M08_hyperx_network.v  M09_backend_core_process.v  M10_vertex_bram_controller.v  M11_apply_iteration_end.v  custom_fifo.v  hbm_interface.v
modules/bitonic_network/: bitonic_network.v  bitonic_network_simple.v  bitonic_network_simple_32.v
modules/crossbar/: crossbar.v
simulator/: CMakeLists.txt
simulator/3rd/DRAMsim3-master/: CMakeLists.txt  Makefile
simulator/3rd/DRAMsim3-master/configs/: HBM1_4Gb_x128.ini
simulator/3rd/DRAMsim3-master/src/: 6_HBM_Interface.cpp  configuration.h  controller.cc  dram_system.cc  main.cc  memory_system.cc  memory_system.h
simulator/doc/: update_log.md
simulator/inc/: Accelerator.h  FrameSupport.h  Framesupport.h  Framework.h  Log.h  MEM.h  Macro.h  Network.h  PipeLine.h  acc.h  accelerator.h  core.h  debug.h  dramsim.h  framework.h  global.h  memory.h  network.h  para.h  parameter.h  self_config.h  structure.h  util.h
simulator/src/: 10_Vertex_BRAM.cpp  11.Apply_Iteration_End.cpp  1_RD_Active_Vertex.cpp  2_RD_Active_Vertex_Offset.cpp  3_Offset_Uram.cpp  4_RD_Active_Vertex_Edge.cpp  5_2_Rd_First_Edge_Bram.cpp  5_Combine_Edge_Rqst.cpp  6_HBM_Interface.cpp  7_Schedule.cpp  8_Omega_Network.cpp  9_Backend_Core_Process.cpp  Initialization.cpp  Network.cpp  debug.cpp  global.cpp  main.cpp  top.cpp
simulator/src/Compute_Core/: 10_Vertex_BRAM.cpp  11.Apply_Iteration_End.cpp  1_RD_Active_Vertex.cpp  2_RD_Active_Vertex_Offset.cpp  2_RD_Active_Vertex_Offset_container.cpp  3_Offset_Uram.cpp  4_RD_Active_Vertex_Edge.cpp  5_2_Rd_First_Edge_Bram.cpp  5_Combine_Edge_Rqst.cpp  7_Schedule.cpp  9_Backend_Core_Process.cpp  9_Backend_Core_Process_container.cpp  core.cpp  core_pipe.cpp
simulator/src/Global/: global.cpp  global_pipe.cpp
simulator/src/Mem/: 6_HBM_Interface.cpp  6_HBM_Interface.cpp_old  mem.cpp
simulator/src/Network/: 8_Omega_Network.cpp  Hyperx_Network_96_channels.cpp  Network.cpp  Network_container.cpp  noc.cpp
simulator/src/core/: 10_Vertex_Ram_Controller.cpp  11.Apply_Iteration_End.cpp  1_RD_Active_Vertex.cpp  2_RD_Active_Vertex_Offset.cpp  4_RD_Active_Vertex_Edge.cpp  5_Combine_Edge_Rqst.cpp  7_Schedule.cpp  9_Backend_Core_Process.cpp  core.cpp
simulator/src/memory/: Delta1_Bram.cpp  Delta2_Bram.cpp  Offset_Uram.cpp  PR_Uram.cpp  memory.cpp
simulator/src/noc/: 8_Hyperx_Network.cpp  8_Hyperx_Network.cpp.ideal  8_Hyperx_Network.cpp.no_crossbar  HyperX.cpp.PCG  noc.cpp
simulator/test/: 10_Vertex_BRAM_Test.cpp  10_Vertex_RAM_Controller_Test.cpp  1_RD_Active_Vertex_Test.cpp  2_RD_Active_Vertex_Offset_Test.cpp  3_Offset_Uram_Test.cpp  4_RD_Active_Vertex_Edge_Test.cpp  5_2_Rd_First_Edge_Bram_Test.cpp  5_Combine_Edge_Rqst_Test.cpp  6_HBM_Interface_Test.cpp  7_Schedule_Test.cpp  8_Hyperx_Network_Test.cpp  8_Omega_Network_Test.cpp  9_Backend_Core_Process_Test.cpp  CMakeLists.txt  DRAM_SIM_TEST.cpp  accelerator  main_Test.cpp  main_sim_Test.cpp  omega_Test.cpp  output_sim_Test.cpp  test
simulator_overall/hyperx_push_pull_sim/: Makefile  hyperx_push_pull_sim  hyperx_push_pull_sim_Test.cpp
simulator_overall/pr_sim/: Makefile  acc.h  pr_sim.cpp
simulator_overall/pr_sim_bk/: acc.h  pr_sim  pr_sim.cpp
tools/DeltaPR/: DeltaPR  Makefile  main.cpp
tools/PRCheck/: Makefile  pr_check  tmp_check.txt
tools/PaRMAT/Release/: sdx_pid8739.str
tools/data_generator/: Makefile  data_generator.cpp
tools/delta_pr/: Makefile  main.cpp
tools/generate_trace/: Makefile  main.cpp
tools/k_channel_trans/: Makefile  main.cpp
tools/pr_check/: main.cpp
